--- a/index.html
+++ b/index.html
@@ -44,28 +44,28 @@
 					Seperti yang telah saya sebutkan diatas, saya sangat menggemari membuat <i>WPAP</i>. Berikut adalah beberapa karya <i>WPAP</i> yang telah saya buat : 
 					<table cellspacing="20px" cellpadding="10" border="0">
 						<tr height="600px">
-							<td>
-								<img src="https://i.postimg.cc/8PCwWFhh/v2-gws-sibas.png" width="400px" alt="wpap 1" hspace="20px" border="1px">
+							<td width="50%">
+								<img src="https://i.postimg.cc/8PCwWFhh/v2-gws-sibas.png" width="100%" alt="wpap 1" hspace="20px" border="1px">
 								<center>
 									<p><i>Sofhiana Bastian</i></p>
 								</center>
 							</td>
-							<td>
-								<img src="https://i.postimg.cc/J7GpgD2P/lsiapa-antum.jpg" width="400px" alt="wpap 2" hspace="20px" border="1px">
+							<td width="50%">
+								<img src="https://i.postimg.cc/J7GpgD2P/lsiapa-antum.jpg" width="100%" alt="wpap 2" hspace="20px" border="1px">
 								<center>
 									<p><i>Raihan Abdurrahaman W.</i></p>
 								</center>
 							</td>
 						</tr>
 						<tr height="600px">
-							<td>
-								<img src="https://i.postimg.cc/PJgybybN/cunya3.jpg" width="400px" alt="wpap 3" hspace="20px" border="1px">
+							<td width="50%">
+								<img src="https://i.postimg.cc/PJgybybN/cunya3.jpg" width="100%" alt="wpap 3" hspace="20px" border="1px">
 								<center>
 									<p><i>Nayeon Twice</i></p>
 								</center>
 							</td>
-							<td>
-								<img src="https://i.postimg.cc/PqWgCpjm/cunya6-remake.jpg" width="400px" alt="wpap 4" hspace="20px" border="1px">
+							<td width="50%">
+								<img src="https://i.postimg.cc/PqWgCpjm/cunya6-remake.jpg" width="100%" alt="wpap 4" hspace="20px" border="1px">
 								<center>
 									<p><i>Jeongyeon Twice</i></p>
 								</center>
